--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,10 +2,13 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    block stylesheets
+      link(rel='stylesheet', href='/stylesheets/style.css')
+      link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
   body
-    div(ng-app="chatApp", ng-cloak)
+    div(ng-app="chatapp", ng-cloak)
       block content
+
 
   block javascripts
     script(src="/angular/angular.min.js")
