--- a/views/chat.pug
+++ b/views/chat.pug
@@ -76,5 +76,5 @@ block content
 
 
 append javascripts
-  script(src="http://localhost:3000/socket.io/socket.io.js")
-  script(src="/javascripts/controller/chatController.js")
+  script(src="/socket.io/socket.io.js")
+  script(src="/javascripts/controllers/chatController.js")
