--- a/views/chat.pug
+++ b/views/chat.pug
@@ -53,9 +53,10 @@ block content
                   span.preview howdoyoudoaspace
             .tab-right(ng-show="activeTab === 2")
               ul.people
-                li.person
-                  span.name Göksenin Mert
-                  span.preview I was wondering...
+                li.person(ng-repeat="user in onlineList")
+                  img(src= "{{  user.meta.profilePhotoUrl }}")
+                  span.name {{ user.meta.name }} {{ user.meta.surname }}
+                  span.preview &nbsp;
           .bottom
             button New Group
         .right
