--- a/views/chat.pug
+++ b/views/chat.pug
@@ -17,40 +17,11 @@ block content
           .tabArea
             .tab-left(ng-show="activeTab === 1")
               ul.people
-                li.person
-                  span.name Thomas Bangalter
-                  span.preview I was wondering...
-                li.person.active
-                  span.name Dog Woofson
-                  span.preview I've forgotten how it felt before
-                li.person
-                  span.name Louis CK
-                  span.preview But we’re probably gonna need a new carpet.
-                li.person
-                  span.name Bo Jackson
-                  span.preview It’s not that bad...
-                li.person
-                  span.name Michael Jordan
-                  span.preview
-                    | Wasup for the third time like is
-                    | you blind bitch
-                li.person
-                  span.name Drake
-                  span.preview howdoyoudoaspace
-                li.person
-                  span.name Louis CK
-                  span.preview But we’re probably gonna need a new carpet.
-                li.person
-                  span.name Bo Jackson
-                  span.preview It’s not that bad...
-                li.person
-                  span.name Michael Jordan
-                  span.preview
-                    | Wasup for the third time like is
-                    | you blind bitch
-                li.person
-                  span.name Drake
-                  span.preview howdoyoudoaspace
+                li.person(
+                  ng-repeat="room in roomList",
+                  ng-click="switchRoom(room)"
+                  )
+                  span.name {{ room.name}}
             .tab-right(ng-show="activeTab === 2")
               ul.people
                 li.person(ng-repeat="user in onlineList")
@@ -59,10 +30,10 @@ block content
                   span.preview &nbsp;
           .bottom
             button(ng-click="newRoom()") New Room
-        .right
+        .right(ng-show='chatClicked')
           .top
             span
-              span.name Dog Woofson
+              span.name {{ chatName }}
           .chat.active-chat
             .bubble.you
               span Hakan Aydın
@@ -79,8 +50,9 @@ block content
               span Hakan Aydın
               | I've forgotten how it felt before
           .write
-            input(type='text')
-            a.write-link.send(href='javascript:;')
+            form(ng-submit="newMessage()")
+              input(type='text', ng-model="message")
+              a.write-link.send(ng-click="newMessage()")
 
 
 append javascripts
