--- a/views/chat.pug
+++ b/views/chat.pug
@@ -11,9 +11,9 @@ block content
           .top
             ul.tab
               li.conversations(ng-click="tabChange(1)")
-                a(ng-class="active: activeTab === 1") Chats
+                a(ng-class="{active: activeTab === 1}") Chats
               li.onlineUsers(ng-click="tabChange(2)")
-                a(ng-class="active: activeTab === 2") Online Users
+                a(ng-class="{active: activeTab === 2}") Online Users
           .tabArea
             .tab-left(ng-show="activeTab === 1")
               ul.people
@@ -35,20 +35,11 @@ block content
             span
               span.name {{ chatName }}
           .chat.active-chat
-            .bubble.you
-              span Hakan Aydın
-              | Hello, can you hear me?
-            .bubble.you
-              span Hakan Aydın
-              | I'm in California dreaming
-            .bubble.me ... about who we used to be.
-            .bubble.me Are you serious?
-            .bubble.you
-              span Hakan Aydın
-              | When we were younger and free...
-            .bubble.you
-              span Hakan Aydın
-              | I've forgotten how it felt before
+            .bubble(
+              ng-repeat="data in messages[roomId]",
+              ng-class="{false: 'me', true: 'you'}[data.userId == user._id]")
+              span {{data.name}} {{data.surname}}
+              | {{data.message}}
           .write
             form(ng-submit="newMessage()")
               input(type='text', ng-model="message")
@@ -58,3 +49,5 @@ block content
 append javascripts
   script(src="/socket.io/socket.io.js")
   script(src="/javascripts/controllers/chatController.js")
+  script(src="/javascripts/services/chatFactory.js")
+  script(src="/javascripts/services/userFactory.js")
