--- a/public/stylesheets/chat.css
+++ b/public/stylesheets/chat.css
@@ -50,6 +50,11 @@ ul,li{
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
+.loading{
+    text-align: center;
+    font-size: 16px;
+    padding: 30px 0;
+}
 .container .left {
     float: left;
     width: 37.6%;
